@@ -42,7 +42,7 @@ import java.util.*;
  *     @test
  *     CardinalityNotEqual ??(s p o) ??(p c)
  *   BINDING TABLE B (after LHS matching)
- *      ?s  ?p  ?o   ?r  ?c 
+ *      ?s  ?p  ?o   ?r  ?c
  *     foo   q   1  _:b1  1  \ cardinality restriction
  *     foo   q   2  _:b1  1  / violated for q on foo
  *     foo   r   1  _:b2  1  - but OK for r on foo
@@ -69,13 +69,15 @@ import java.util.*;
  * @version Wed Mar 20 14:36:50 CET 2013
  */
 public final class CardinalityNotEqual extends RelationalOperator {
-	
+
 	/**
 	 * this implementation of apply() assumes that args consists of exactly TWO (2)
 	 * binding tables, the first one of length 3 (subject predicate object), and the
 	 * second one of length 2 (predicate cardinality);
 	 * I will destructively modify the first binding table, and will only return that
 	 * table (args[0]), since the second table is only used for lookup
+   *
+   * @return args[0], the modified input binding table, corresponding to subject predicate object
 	 */
 	public BindingTable[] apply(BindingTable[] args) {
 		// obtain the right positions from mapping internalized in the binding table arguments;
@@ -93,17 +95,17 @@ public final class CardinalityNotEqual extends RelationalOperator {
 				posize = index.get(spo[pos10]);
 				if (posize.containsKey(spo[pos11])) {
 					card = posize.get(spo[pos11]);
-					card = Integer.valueOf(card + 1);  // more than one <s, p, *> instantiation
+					card = new Integer(card + 1);  // more than one <s, p, *> instantiation
 					posize.put(spo[pos11], card);
 				}
 				else {
-					card = Integer.valueOf(1);
+					card = new Integer(1);
 					posize.put(spo[pos11], card);
 				}
 			}
 			else {
 				posize = new HashMap<Integer, Integer>();
-				card = Integer.valueOf(1);  // first occurrence
+				card = new Integer(1);  // first occurrence
 				posize.put(spo[pos11], card);
 				index.put(spo[pos10], posize);
 			}
@@ -129,5 +131,5 @@ public final class CardinalityNotEqual extends RelationalOperator {
 		// only return the _modified_ table (the second one will not change the original LHS binding table)
 		return new BindingTable[]{args[0]};
 	}
-	
+
 }
